Add CSRF protection support to forms
This adds global middleware to prevent CSRF and to set a token that
all views can access and set on forms.

--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -22,6 +22,8 @@
     <p>This quote has already been accepted.</p>
   {% else %}
     <form method="post" action="/{{ publicToken }}/accept">
+      <input type="hidden" name="_csrf" value="{{ CSRF_TOKEN }}">
+
       <button type="submit">Accept quote</button>
     </form>
   {% endif %}
