Update error support to handle CSRF errors
This handles the error code `EBADCSRFTOKEN` and sends different
text back to the view.

--- a/src/app/views/errors/default.njk
+++ b/src/app/views/errors/default.njk
@@ -3,25 +3,25 @@
 {% set pageTitle='Error' %}
 
 {% block page_content %}
-
 	<h1 class="error-heading">
-		{{ error.code | default( 500 ) }}
+		{{ statusMessage }}
 	</h1>
-
-	<p>
-		Sorry, something went wrong. Try <a href="/">visiting the homepage</a>.
-	</p>
 
 	<p>
 		This error has been reported to the team.
 	</p>
 
-	{%- if showErrors -%}
-
-	<p class="stack-trace">
-		{{ error.stack }}
+	<p>
+		Try <a href="/">visiting the homepage</a>.
 	</p>
 
-	{%- endif -%}
+	{%- if showErrors -%}
+		<h2 class="error-heading">
+			{{ error.code | default(500) }}
+		</h2>
 
+		<p class="stack-trace">
+			{{ error.stack }}
+		</p>
+	{%- endif -%}
 {% endblock  %}
