--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -40,9 +40,8 @@
   </article>
 
   {% if not quote.accepted_on %}
-    <form method="post" action="/{{ publicToken }}/quote/accept">
+    <form method="post">
       <input type="hidden" name="_csrf" value="{{ CSRF_TOKEN }}">
-
       <button type="submit" class="button">Accept quote</button>
     </form>
   {% endif %}
